--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,6 +27,11 @@
     <section id="greenSection">
         
     </section>
+    <section>
+        <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3589.321356159183!2d28.20695667518794!3d-25.891804351323568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956608911ce097%3A0x519896b4b6eda40a!2sOpen%20Window%20-%20Centurion!5e0!3m2!1sen!2sza!4v1710455813767!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
 
     <footer>
         <p><i>Copyright 2024 -HTML Template Inc</i></p>
