--- a/pages/flights.html
+++ b/pages/flights.html
@@ -8,7 +8,7 @@
     <title>Red Planet Ventures</title>
     <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap, Template">
     <meta name="author" content="Tristan Leech, 241365">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -16,23 +16,22 @@
 
 <body>
     <header>
-        <div class="bgImage">
+        <div class="flightsImage">
             <nav>
                 <div class="topNav">
-                    <!--<div class="navFlex"><img src="assets/homePageHeader.png" width="50px"></div>-->
-                    <div class="navFlex"><a href="index.html"><img src="assets/images/logo.png" width="266px" height="48px"></a></div> 
+                    <div class="navFlex"><a href="../index.html"><img src="../assets/images/logo.png" width="266px" height="48px"></a></div> 
                     <div class="navFlex">
-                        <a class="active" href="index.html">Home</a>
-                        <a href="pages/flights.html">Flights</a>
-                        <a href="pages/contact.html">Contact</a>
+                        <a href="../index.html">Home</a>
+                        <a class="active" href="../pages/flights.html">Flights</a>
+                        <a href="../pages/contact.html">Contact</a>
                     </div>
-                    <div class="logo"><p><img src="assets/images/searchBar.png" width="266px" style="padding-right: 10px;"></p></div>
+                    <div class="logo"><p><img src="../assets/images/searchBar.png" width="266px" style="padding-right: 10px;"></p></div>
                 </div>
                     
                 <div class="headerSection">
                     <div class="headerFlex">
                         <div class="flexItem">
-                            <h1>Red Planet<br>Ventures</h1>
+                            <h1>BOOK A FLIGHT</h1>
                             <h2>EXPLORE THE SOLAR SYSTEM</h2>
                         </div>
                     </div>
