--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,37 @@
     </section>
 
     <footer>
-        <p><i>Copyright 2024 -HTML Template Inc</i></p>
+        <div class="copyFlex">
+            <div class="footerFlex">
+                <div class="flFlex">
+                    <img src="../assets/images/logo.png" width="266" height="48">
+                    <p>Offering unforgettable trips to<br>explore planets in our solar<br>system.</p>
+                </div>
+                <div class="linksFlex">
+                    <h3>Company</h3>
+                    <a href="../index.html"><br>Home</a>
+                    <a href="../pages/flights.html"><br>Flights</a>
+                    <a href="../pages/contact.html"><br>Contact</a>
+                </div>
+                <div class="socialsFlex">
+                    <h3>Social Media Links</h3>
+                    <div class="slinksFlex">
+                        <a href="../pages/contact.html"><img src="/assets/images/smInstagram.png" width="77" height="77"></a>
+                        <a href="../pages/contact.html"><img src="/assets/images/smX.png" width="77" height="77"></a>
+                        <a href="../pages/contact.html"><img src="/assets/images/smTicktock.png" width="77" height="77"></a>
+                        <a href="../pages/contact.html"><img src="/assets/images/smFacebook.png" width="77" height="77"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="legalsFlex">
+                <p>All Rights Reserved @ Open Window 2024</p>
+                <div>
+                    <a href="../pages/contact.html">Terms & Conditions</a>
+                    <a href="../pages/contact.html">Privacy Policy</a>
+                </div>
+                
+            </div>
+        </div>
     </footer>
 
 </body>
