--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="pages/flights.html">Flights</a>
                         <a href="pages/contact.html">Contact</a>
                     </div>
-                    <div class="logo"><p><img src="assets/images/searchBar.png" width="266px" style="padding-right: 10px;"></p>
+                    <div class="search"><p><img src="assets/images/searchBar.png" width="266px" style="padding-right: 10px;"></p>
                     </div>
                 </div>
                     
