--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,7 +40,7 @@
             <div class="aboutFlex">
                 <h3>ABOUT</h3>
                 <H2>RED PLANET VENTURES</H2>
-                <p>Select from our rang of luxury, commercial, or<br>budget shuttles to fulfil your dream space<br>vacation. Experience unparalleled comfort and<br>convenience as you journey to your planet of<br>choice, ensuring an unforgettable and tailored<br>experience for every traveler.</p>
+                <p>Welcome to Red Planet Ventures, where we are dedicated to turning dreams of interplanetary exploration into exhilarating realities. As a Premier provider of space tourism experiences, we specialize in crafting meticulously curated journeys to the diverse planets within our solar system. From the rugged terrains of Mars to the majestic rings of Saturn, our expertly designed trips offer unparalleled opportunities for discovery and adventure. With a commitment to safety, innovation, and customer satisfaction, we strive to exceed expectations and leave a lasting impression on every traveler who embarks on a voyage with us. Join us as we push the boundaries of exploration and unlock the mysteries of the cosmos with Red Planet Ventures</p>
             </div>
             <img src="../assets/images/contactImage.png" width="607px" height="534">
         </div>
@@ -49,19 +49,43 @@
     <section>
         <div class="details">
             <div class="medMap">
-                <div class="socialFlexC">
-                    <h3>CONTACT US THROUGH OUR</h3>
-                    <h3>SOCIAL MEDIA PAGES</h3>
-                    <div class="slinksFlex">
-                        <a href="../pages/contact.html"><img src="/assets/images/smInstagram.png" width="77" height="77"></a>
-                        <a href="../pages/contact.html"><img src="/assets/images/smX.png" width="77" height="77"></a>
-                        <a href="../pages/contact.html"><img src="/assets/images/smTicktock.png" width="77" height="77"></a>
-                        <a href="../pages/contact.html"><img src="/assets/images/smFacebook.png" width="77" height="77"></a>
-                    </div>
-                    <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3589.321356159183!2d28.20695667518794!3d-25.891804351323568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956608911ce097%3A0x519896b4b6eda40a!2sOpen%20Window%20-%20Centurion!5e0!3m2!1sen!2sza!4v1710455813767!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
+                <h3>CONTACT US THROUGH OUR</h3>
+                <h2>SOCIAL MEDIA PAGES</h2>
+                <div class="slinksFlex">
+                    <a href="../pages/contact.html"><img src="/assets/images/smInstagram.png" width="97" height="97"></a>
+                    <a href="../pages/contact.html"><img src="/assets/images/smX.png" width="97" height="97"></a>
+                    <a href="../pages/contact.html"><img src="/assets/images/smTicktock.png" width="97" height="97"></a>
+                    <a href="../pages/contact.html"><img src="/assets/images/smFacebook.png" width="97" height="97"></a>
                 </div>
+                <h3>OR VISIT US AT OUR</h3>
+                <h2>PHYSICAL LOCATION</h2>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3589.321356159183!2d28.20695667518794!3d-25.891804351323568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956608911ce097%3A0x519896b4b6eda40a!2sOpen%20Window%20-%20Centurion!5e0!3m2!1sen!2sza!4v1710455813767!5m2!1sen!2sza" width="590" height="520" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+            <div class="formContainer">
+                <form id="contact">
+                    <h2>SEND US A MESSAGE</h2>
+                    <h3>Your Name</h3>
+                    <fieldset>
+                        <input placeholder="Abc" type="text" tabindex="1" required>
+                    </fieldset>
+                    <h3>Email Address</h3>
+                    <fieldset>
+                        <input placeholder="Abc@def.com" type="text" tabindex="2" required>
+                    </fieldset>
+                    <h3>Subject</h3>
+                    <fieldset>
+                        <input placeholder="This is optional" type="email" tabindex="3">
+                    </fieldset>
+                    <h3>Message</h3>
+                    <fieldset>
+                        <textarea placeholder="Hi! I'd like to ask about" name="message" tabindex="4" required></textarea>
+                    </fieldset>
+                    <fieldset>
+                        <button name="Submit" type="submit" id="submitContactForm">Submit</button>
+                    </fieldset>
+                </form>
             </div>
         </div>
 
