--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <div class="navFlex"><a href="index.html"><img src="assets/images/logo.png" width="266px" height="48px"></a></div> 
                     <div class="navFlex">
                         <a class="active" href="index.html">Home</a>
+                        <a href="pages/about.html">About</a>
                         <a href="pages/flights.html">Flights</a>
                         <a href="pages/contact.html">Contact</a>
                     </div>
@@ -49,7 +50,7 @@
                 <h3>FEATURED TRIP</h3>
                 <H2>THE CLASSIC MARS<br>EXPERIENCE</H2>
                 <p>Embark on a Mars vacation. Red deserts, ancient<br>relics, and towering canyons await. Enjoy low-gravity<br>hiking, rover trips to Olympus Mons, and stargazing<br>under Phobos and Deimos. Unforgettable adventures<br>beckon on the rust coloured landscapes of the Red<br>Planet.</p>
-                <div class="formContainer">
+                <div>
                     <form id="bookNow">
                         <fieldset>
                             <button name="bookNowButton" type="submit" id="bookNowButton">Book Now</button>
