--- a/pages/flights.html
+++ b/pages/flights.html
@@ -22,6 +22,7 @@
                     <div class="navFlex"><a href="../index.html"><img src="../assets/images/logo.png" width="266px" height="48px"></a></div> 
                     <div class="navFlex">
                         <a href="../index.html">Home</a>
+                        <a href="../pages/about.html">About</a>
                         <a class="active" href="../pages/flights.html">Flights</a>
                         <a href="../pages/contact.html">Contact</a>
                     </div>
