--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Red Planet Ventures</title>
     <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap, Template">
     <meta name="author" content="Tristan Leech, 241365">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
