--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,11 +8,14 @@
     <title>Red Planet Ventures</title>
     <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap, Template">
     <meta name="author" content="Tristan Leech, 241365">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
+
+<body onload="welcomeUser()"></body>
 
 <body>
     <header>
@@ -73,18 +76,18 @@
                     </fieldset>
                     <h3>Email Address</h3>
                     <fieldset>
-                        <input placeholder="Abc@def.com" type="text" tabindex="2" required>
+                        <input placeholder="Abc@def.com" type="email" tabindex="2" required>
                     </fieldset>
                     <h3>Subject</h3>
                     <fieldset>
-                        <input placeholder="This is optional" type="email" tabindex="3">
+                        <input placeholder="This is optional" type="text" tabindex="3">
                     </fieldset>
                     <h3>Message</h3>
                     <fieldset>
                         <textarea placeholder="Hi! I'd like to ask about" name="message" tabindex="4" required></textarea>
                     </fieldset>
                     <fieldset>
-                        <button name="Submit" type="submit" id="submitContactForm">Submit</button>
+                        <button type="submit" onclick="thankYou()" name="submitContactForm">Submit</button>
                     </fieldset>
                 </form>
             </div>
