--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,8 +15,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
-<body onload="welcomeUser()"></body>
-
 <body>
     <header>
         <div class="contactImage">
@@ -29,7 +27,16 @@
                         <a href="../pages/flights.html">Flights</a>
                         <a class="active" href="../pages/contact.html">Contact</a>
                     </div>
-                    <div class="logo"><p><img src="../assets/images/searchBar.png" width="266px" style="padding-right: 10px;"></p></div>
+                    <div class="logo">
+                        <p><fieldset>
+                            <input placeholder="Search" type="text" tabindex="1" required>
+                        </fieldset></p>
+                    </div>
+                    <div class="cart">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket2" viewBox="0 0 16 16">
+                        <path d="M4 10a1 1 0 0 1 2 0v2a1 1 0 0 1-2 0zm3 0a1 1 0 0 1 2 0v2a1 1 0 0 1-2 0zm3 0a1 1 0 1 1 2 0v2a1 1 0 0 1-2 0z"/>
+                        <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-.623l-1.844 6.456a.75.75 0 0 1-.722.544H3.69a.75.75 0 0 1-.722-.544L1.123 8H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.163 8l1.714 6h8.246l1.714-6z"/>
+                    </div>
                 </div>
 
                 <div class="contactUs">
@@ -68,7 +75,7 @@
                 </div>
             </div>
             <div class="formContainer">
-                <form id="contact">
+                <form id="contact" name="contact">
                     <h2>SEND US A MESSAGE</h2>
                     <h3>Your Name</h3>
                     <fieldset>
@@ -86,9 +93,8 @@
                     <fieldset>
                         <textarea placeholder="Hi! I'd like to ask about" name="message" tabindex="4" required></textarea>
                     </fieldset>
-                    <fieldset>
-                        <button type="submit" onclick="thankYou()" name="submitContactForm">Submit</button>
-                    </fieldset>
+
+                    <button type="submit" onclick="thankYou()" name="submit">Submit</button>
                 </form>
             </div>
         </div>
@@ -131,7 +137,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
